--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "hbs": "^4.2.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
